(fix) Technologies was breaking the page on mobile

--- a/src/scss/_technologies.scss
+++ b/src/scss/_technologies.scss
@@ -1,8 +1,8 @@
 .technologies {
   padding-top: unit(1);
   
-  margin-left: -(unit(1));
-  margin-right: -(unit(1));
+  margin-left: -(unit(1/2));
+  margin-right: -(unit(1/2));
 
   display: flex;
   justify-content: center;
